--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <h1 class="text-xl">bi-smi llāhi r-raḥmāni r-raḥīmi</h1>
     </div>
     <div>
-        <div></div>
-        <div></div>
+        <div  id="ayat-container"></div>
+        <div><button>Click here for recite significant verse from Quran</button></div>
     </div>
     <script src="script.js"></script>
 </body>
