--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        body{font-family: 'montserrat', sans-serif;}
+        body {
+            font-family: 'montserrat', sans-serif;
+        }
     </style>
 </head>
 
@@ -22,10 +24,17 @@
         <img class="w-40 h-40  pb-10" src="img/Allah.png" alt="">
         <h1 class="text-xl">bi-smi llāhi r-raḥmāni r-raḥīmi</h1>
     </div>
-    <div>
-        <div  id="ayat-container"></div>
-        <div><button>Click here for recite significant verse from Quran</button></div>
+    <div class="flex h-full">
+        <div id="ayat-container" class="border border-current w-1/2">
+
+        </div>
+        <div>
+            <button>Click here for recite significant verse from Quran</button>
+        </div>
     </div>
+
+
+    <!-- js link -->
     <script src="script.js"></script>
 </body>
 
