container and button class added

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <img class="w-40 h-40  pb-10" src="img/Allah.png" alt="">
         <h1 class="text-xl">bi-smi llāhi r-raḥmāni r-raḥīmi</h1>
     </div>
-    <div class="flex h-full">
-        <div id="ayat-container" class="border border-current w-1/2">
+    <div class="flex h-full justify-between mt-5 w-full">
+        <div id="ayat-container" class="border border-current w-1/2 h-80 ml-5">
 
         </div>
-        <div>
-            <button>Click here for recite significant verse from Quran</button>
+        <div class="flex justify-center items-center w-1/2">
+            <button class="p-5 bg-teal-200 rounded-lg ">Click here for recite significant verse from Quran</button>
         </div>
     </div>
 
