connected with js

--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
         <h1 class="text-xl">bi-smi llāhi r-raḥmāni r-raḥīmi</h1>
     </div>
     <div class="flex h-full justify-between mt-5 w-full">
-        <div id="ayat-container" class="border border-current w-1/2 h-80 ml-5">
-
+        <div id="ayat-container" class="border border-current w-full h-80 ml-5 text-center overflow-scroll">
+            
         </div>
-        <div class="flex justify-center items-center w-1/2">
-            <button class="p-5 bg-teal-200 rounded-lg ">Click here for recite significant verse from Quran</button>
+        <div class="flex flex-col justify-center items-center w-1/2">
+            <button id="btn" class="p-5 bg-teal-200 rounded-lg h-16 text-center">Click here for recite significant verses from Quran</button>
+            <button class="p-5 bg-teal-200 rounded-lg h-16 text-center mt-5" onClick="window.location.reload();">Refresh the Page for clearing</button>
         </div>
     </div>
 
