--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
+        
         body {
             font-family: 'montserrat', sans-serif;
         }
     </style>
 </head>
 
-<body class="h-full bg-sky-50">
-    <div class="flex flex-col items-center pt-10">
-        <img class="w-40 h-40  pb-10" src="img/Allah.png" alt="">
-        <h1 class="text-xl">bi-smi llāhi r-raḥmāni r-raḥīmi</h1>
+<body class="h-full bg-indigo-50">
+    <div class="flex flex-col items-center pt-2">
+        <h1 class="text-3xl text-center">bi-smi llāhi r-raḥmāni r-raḥīmi</h1>
     </div>
-    <div class="flex h-full justify-between mt-5 w-full">
-        <div id="ayat-container" class="border border-current w-full h-80 ml-5 text-center overflow-scroll">
+    <div class="sm:flex flex-col lg:flex flex-row h-full justify-between mt-5 w-full">
+        <div id="ayat-container" class="border border-current rounded-lg w-full h-96 text-center overflow-y-scroll">
             
         </div>
-        <div class="flex flex-col justify-center items-center w-1/2">
-            <button id="btn" class="p-5 bg-teal-200 rounded-lg h-16 text-center">Click here for recite significant verses from Quran</button>
-            <button class="p-5 bg-teal-200 rounded-lg h-16 text-center mt-5" onClick="window.location.reload();">Refresh the Page for clearing</button>
+        <div class="flex flex-col justify-center items-center mt-5">
+            <button id="btn" class="p-5 bg-teal-200 rounded-lg  text-center">Click here for recite significant verses from Quran</button>
+            <button class="p-5 bg-teal-200 rounded-lg  text-center mt-5 mb-5" onClick="window.location.reload();">Refresh the Page for clearing</button>
         </div>
     </div>
 
